hw submit lesson 2

--- a/lesson 2/index.html
+++ b/lesson 2/index.html
@@ -13,10 +13,10 @@
     <h1 class="hi">hi 2</h1>
     <h1 class="hi">hi 3</h1> -->
 
-    <button>-</button>
-    <span>0</span>
-    <button>+</button>
-    <button>change color</button>
+    <button id="-">-</button>
+    <span id="number">0</span>
+    <button id="+">+</button>
+    <button id="color">change color</button>
 
     <script src="index.js"></script>
 </body>
