--- a/lesson 2/index.html
+++ b/lesson 2/index.html
@@ -17,6 +17,7 @@
     <span id="number">0</span>
     <button id="+">+</button>
     <button id="color">change color</button>
+    <input type="text" id="name">
 
     <script src="index.js"></script>
 </body>
