pokemon, cursor edit

--- a/cursor selector/index.html
+++ b/cursor selector/index.html
@@ -6,24 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        /* * {
-            cursor: url(./6764_sovietbop.gif);
-        } */
-        img {
+        /* img {
             box-sizing: border-box;
             height: 5em;
             width: 5em;
+        } */
+        #selections{
+            display: flex; 
+            justify-content: space-evenly;
         }
     </style>
 </head>
 
 <body id="body" style="height: 100vh;">
-    <div style="display: flex; justify-content: space-evenly;">
-        <img id="t34" src="./7924_t34tank.png" alt="">
-        <img id="cat" src="./6764_sovietbop.gif" alt="">
-        <img id="kanna" src="./SovietKanna.png" alt="">
-        <h2 id="reset">reset (click)</h2>
-    </div>
+    <div>select your cursor</div>
+    <div id="selections"></div>
 
     <script src="index.js"></script>
 </body>
