--- a/traffic  lights/index.html
+++ b/traffic  lights/index.html
@@ -1,49 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        #lights-container{
+        #lights-container {
             position: absolute;
             right: 50%;
-            width: 90px; 
-            background-color: #17202A; 
-            height: 200px; 
+            width: 90px;
+            background-color: #17202A;
+            height: 200px;
             border-radius: 5px;
             display: flex;
             flex-direction: column;
             justify-content: space-evenly;
             align-items: center;
         }
-        .lights{
+
+        .lights {
             width: 50px;
             height: 50px;
             border-radius: 50px;
             /* margin: 20px; */
         }
-        #red{
+
+        #red {
             background-color: red;
         }
-        #yellow{
+
+        #yellow {
             background-color: yellow;
         }
-        #green{
+
+        #green {
             background-color: green;
         }
-        body{
+
+        body {
             position: relative;
         }
     </style>
 </head>
+
 <body>
     <div id="lights-container">
         <div class="lights" id="red"></div>
         <div class="lights" id="yellow"></div>
         <div class="lights" id="green"></div>
     </div>
-    
-    <script src='index.js'></script>
+
+    <script>
+        let red = document.getElementById('red')
+        let yellow = document.getElementById('yellow')
+        let green = document.getElementById('green')
+
+        red.style.backgroundColor = 'grey'
+        yellow.style.backgroundColor = 'grey'
+        green.style.backgroundColor = 'grey'
+
+        function redLight() {
+            red.style.backgroundColor = 'red'
+            yellow.style.backgroundColor = 'grey'
+            setTimeout(greenLight, 5000)
+        }
+
+        function greenLight() {
+            green.style.backgroundColor = 'green'
+            red.style.backgroundColor = 'grey'
+            setTimeout(yellowLight, 4000)
+        }
+
+        function yellowLight() {
+            yellow.style.backgroundColor = 'yellow'
+            green.style.backgroundColor = 'grey'
+            setTimeout(redLight, 1000)
+        }
+        redLight()
+    </script>
 </body>
+
 </html>
