hw submit lesson ??

--- a/es6/index.html
+++ b/es6/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,10 +8,19 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
     <div id="to-do-items">
+    </div>
+    <div id="add-to-do-container">
+        <div id="input-container">
+            <input type="text" name="data" id="to-do-input">
+            <input type="text" id="status-input">
+        </div>
+        <button id="enter-btn">enter</button>
     </div>
 
     <script src='index.js'></script>
 </body>
+
 </html>
